k8s_manifest/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-owais
spec:
  selector:
    matchLabels:
      app: app-owais
  template:
    metadata:
      labels:
        app: app-owais
    spec:
      containers:
      - name: app-owais
        image: zakyfetoh/app-owais
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app-owais-service
spec:
  type: ClusterIP
  selector:
    app: app-owais
  ports:
  - port: 80
    targetPort: 3000
