k8s_manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-owais-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app-owais.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-owais-service-ex
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app-owais-service-ex
spec:
  type: ExternalName
  externalName: app-owais-service.default.svc.cluster.local
